--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
  <head>
-   <title>Hello</title>
+   <title> Привіт Юля))) </title>
  </head>
  <body>
     <h1>Hello></h1>
