--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html>
  <head>
-   <title> Привіт Юля))) </title>
+   <title>Папужки</title>
  </head>
 
 
-
-
-
  <body>
-    <h1>Привіт Юля)))</h1>
-    пререпвап
+   <div> <h1>Хвилясті папужки </h1> </div>
+   <div> <h1>Корелки</h1> </div>
+  <div> <h1>Нерозлучники</h1> </div>
+
+
   </body>
 </html>
