--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
 
  <body>
-   <div> <h1>Хвилясті папужки </h1> </div>
+   <div> <h1>Хвилясті папужки </h1> 
+             <section> hdkhdkhgjghd
+
+   </div>
+  
    <div> <h1>Корелки</h1> </div>
   <div> <h1>Нерозлучники</h1> </div>
 
